Added keywords to HTML

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We currently only offer reservations for dine-in and take-out orders. Call (562) 924-2498"
+    />
+    <meta
+      name="keywords"
+      content="jang soo sushi bar, jang soo, hawaiian gardens, sushi restaurant, restaurant, food, sushi, sashimi, nigiri, salmon, tuna, japanese, korean, japanese restaurant"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
