--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Jang Soo Sushi Bar</title>
   </head>
   <body>
