--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="jang soo sushi bar, jang soo, hawaiian gardens, sushi restaurant, restaurant, food, sushi, sashimi, nigiri, salmon, tuna, japanese, korean, japanese restaurant"
+      content="장수 스시바, 장수스시 메뉴, 장수스시, 장수 스시, 장수, jang soo sushi bar, jang soo, hawaiian gardens, sushi restaurant, restaurant, food, sushi, sashimi, nigiri, salmon, tuna, japanese, korean, japanese restaurant"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
