--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We currently only offer reservations for dine-in and take-out orders. Call (562) 924-2498 today."
+      content="Welcome to Jang Soo Sushi Bar - home of fresh sushi and many delicious dishes. Call (562) 924-2498 today."
     />
     <meta
       name="keywords"
